065 sub ans 2: produce a binary called 'code'

--- a/065_read_constr1/Makefile
+++ b/065_read_constr1/Makefile
@@ -1,2 +1,2 @@
-test: code.cpp
-	g++ -o test -Wall -Werror -pedantic -ggdb3 code.cpp
+code: code.cpp
+	g++ -o code -Wall -Werror -pedantic -ggdb3 code.cpp
