098 sub ans 02.1: fix bug with memory leak

--- a/098_dedup/Makefile
+++ b/098_dedup/Makefile
@@ -1,2 +1,5 @@
 dedup: test.cpp dedup.h
-	g++ -o dedup test.cpp
+	g++ -o dedup -Wall -Werror -std=c++11 -pedantic -ggdb3 test.cpp
+
+clean:
+	rm -f $(OBJS) $(PROGRAM) *~ tmp.txt test dedup
