--- a/mp_miniproject/Makefile
+++ b/mp_miniproject/Makefile
@@ -1,16 +1,16 @@
 CPP=g++
 SRCS=$(wildcard *.cpp)
 BASE=$(basename $(SRCS))
-OBJS=$(addsuffix .o, $(addprefix obj/,$(BASE)))
+OBJS=$(addsuffix .o, $(BASE))
 #OBJS=$(patsubst %.cpp, %.o, $(SRCS))
 CPPFLAGS=-std=gnu++98 -pedantic -Wall -Werror -ggdb3
 myShell:$(OBJS)
-	CPP -o $@ $(OBJS)
+	g++ -o $@ $(OBJS)
 %.o:%.h %.cpp
-	CPP $(CPPFLAGS) -c $<
+	g++ $(CPPFLAGS) -c $<
 
 .PHONY:clean
 clean:
-	rm -f myShell *.o *.cpp~ *.h~ tmp* test
+	rm -f myShell *.o *.cpp~ *.h~ tmp* test Makefile~
 
 #oneFile.o: oneHeader.h someHeader.h
