mp add err handling

--- a/mp_miniproject/Makefile
+++ b/mp_miniproject/Makefile
@@ -5,7 +5,7 @@ OBJS=$(addsuffix .o, $(BASE))
 #OBJS=$(patsubst %.cpp, %.o, $(SRCS))
 CPPFLAGS=-std=gnu++98 -pedantic -Wall -Werror -ggdb3
 myShell:$(OBJS) $(wildcard *.h)
-	g++ -o $@ $(OBJS)
+	g++ -o $@ $(CPPFLAGS) $(OBJS)
 %.o:%.cpp
 	g++ $(CPPFLAGS) -c $<
 
